--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "solid-js": "^1.9.5"
   },
   "devDependencies": {
+    "@types/node": "^22.15.24",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.6",
     "tailwindcss": "^4.1.3",
     "typescript": "~5.7.2",
     "vite": "^6.2.0",
-    "vite-plugin-solid": "^2.11.2",
-    "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.6"
+    "vite-plugin-solid": "^2.11.2"
   }
 }
